fixed game section on mobile

--- a/src/components/Games/Games.module.css
+++ b/src/components/Games/Games.module.css
@@ -44,18 +44,19 @@
     margin: 1rem;
 }
 
-.link:hover{
+.link:hover {
     transform: scale(1.1);
 }
 
-.game{
+.game {
     position: relative;
     width: 100%;
     height: 800px;
     margin-bottom: 5%;
 }
 
-.gameInfoLeft h1, .gameInfoRight h1 {
+.gameInfoLeft h1,
+.gameInfoRight h1 {
     margin-bottom: 1.5rem;
     font-size: 2rem;
 }
@@ -68,7 +69,8 @@
     height: 100%;
 }
 
-.gameImageContainerLeft:hover, .gameImageContainerRight:hover {
+.gameImageContainerLeft:hover,
+.gameImageContainerRight:hover {
     transform: scale(0.9);
 }
 
@@ -111,4 +113,26 @@
     left: -5%;
     padding: 1rem;
     width: 600px;
+}
+
+@media screen and (max-width: 1500px) {
+    .gameImageContainerLeft, .gameImageContainerRight{
+        height: 75%;
+        width: 100%;
+    }
+    .gameInfoLeft{
+        position: relative;
+        top: -10%;
+        right: 0;
+        padding: 1rem;
+        width: 600px;
+    }
+
+    .gameInfoRight {
+        position: relative;
+        top: -10%;
+        left: 0;
+        padding: 1rem;
+        width: 600px;
+    }
 }
